# sports-analyzer

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: main.py  schemas.py
apps/ai-service/app/core/: config.py
apps/ai-service/app/routes/: analyze.py  health.py
apps/ai-service/app/services/: ai.py  clip.py  history.py
apps/ai-service/tests/: test_analyze_stub.py  test_health.py
apps/web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/analyze/: route.ts
apps/web/app/api/feed/: route.ts
apps/web/app/api/openapi.json/: route.ts
apps/web/app/api/search/: route.ts
apps/web/app/api/watch/[videoId]/meta/: route.ts
apps/web/app/docs/: route.ts
apps/web/app/search/: page.tsx
apps/web/app/watch/[videoId]/: page.tsx  watch-experience.tsx
apps/web/components/feed/: FeedGrid.tsx  MissingKeyNotice.tsx  Navbar.tsx  SearchBox.tsx  VideoCard.tsx
apps/web/lib/: env.ts  format.test.ts  format.ts  openapi.ts  youtube.ts
docs/: architecture.md  requirements.md
